<resources>
    <!-- Aplicacion-->
    <string name="app_name">UBUNG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <!-- Inicio de Sesion -->
    <string name="registrarse_correo_label">Correo:</string>
    <string name="registrarse_genero_label">Género:</string>
    <string name="registrarse_telefono_label">Teléfono:</string>
    <string name="registrarse_contrasena_label">Contraseña:</string>
    <string name="registrarse_nombre_label">Nombre:</string>
    <string name="registrarse_contrasena2">Repite la contraseña:</string>
    <string name="registrarse_fecha_de_nacimiento_label">Fecha de nacimiento:</string>
    <string name="registrarse_foto">Foto de perfil: </string>
    <string name="registrarse_genero_hombre">Hombre</string>
    <string name="registrarse_genero_mujer">Mujer</string>

    <string name="registrarse_texto_boton_inic_sec">Iniciar Sesión</string>
    <string name="registrarse_texto_boton_regis">Registrarse</string>
    <string name="registrarse_texto_boton_ya_tienes_cuenta">Ya tengo cuenta</string>
    <string name="registrarse_texto_boton_siguiente">Siguiente</string>
    <!-- Inicio de Sesion -->

    <!-- Utiles-->
    <string name="usuario">dsfjlskdjf</string>
    <!-- Utiles-->
    <!-- Solicitudes clientes -->
    <string name="soli_botonAceptar">Aceptar</string>
    <string name="soli_botonRechazar">X</string>
    <!-- Solicitudes clientes -->


    <!-- Aplicacion-->

    <!--Basededatos-->

    <string name="nomble_clasesFDB" translatable="false">clases</string>
    <string name="nomble_fotos_perfilSR" translatable="false">fotos de perfil</string>

    <string name="db_clases_profe_poner_numero" translatable="false">profe</string>

    <string name="db_clases_cliente_poner_numero_profe_y_cliente" translatable="false">cliente</string>
    <string name="db_clases_fecha_y_hora" translatable="false">fecha-hora</string>
    <string name="db_pilates_oFisio_poner_numero" translatable="false">pilatesofisio</string>
    <string name="db_pilates_oFisio_pilates" translatable="false">pilates</string>
    <string name="db_pilates_oFisio_fisio" translatable="false">fisio</string>


    <string name="db_clases_lista_de_espera" translatable="false">lista_de_espera</string>


    <string name="nomble_paqueteFDB" translatable="false">paquete</string>

    <string name="paqueteFDB_clases_total" translatable="false">clases total</string>
    <string name="paqueteFDB_clases_vistas" translatable="false">clases vistas</string>
    <string name="paqueteFDB_fechadevec" translatable="false">fecha de vec</string>

    <string name="nombre_solicitudedFDB" translatable="false">solicitudes</string>

    <string name="nombre_clienteFDB" translatable="false">clientes</string>
    <string name="nomble_profesoresFDB" translatable="false">profesores</string>

    <string name="db_profesores_poderSupremo" translatable="false">podersupremo</string>


    <string name="db_correo" translatable="false">correo</string>
    <string name="db_sol_contrasena" translatable="false">contrasena</string>
    <string name="db_cumpleanos" translatable="false">hbd</string>
    <string name="db_genero" translatable="false">masofem</string>
    <string name="db_peso" translatable="false">peso</string>
    <string name="db_direccion" translatable="false">direccion</string>
    <string name="db_seguro_medico" translatable="false">seguro</string>
    <string name="db_tel" translatable="false">tel</string>
    <string name="db_nombre" translatable="false">nombre</string>
    <string name="db_foto" translatable="false">foto</string>
    <string name="db_clientes_paquete" translatable="false">paquete</string>
    <string name="db_comentarios" translatable="false">comentarios</string>
    <string name="db_id" translatable="false">ID</string>


    <string name="nombre_preferenciasFDB" translatable="false">preferencias</string>
    <string name="db_preferencias_cantAlmnos_por_clase" translatable="false">alum_por_clas</string>
    <string name="db_preferencias_cantAlmnos_por_clase_fisio" translatable="false">alum_por_clas_fisio</string>

    <string name="db_preferencias_cantAlmnos_por_clase_listaDeEs" translatable="false">alum_por_clas_listaDeEs</string>
    <string name="db_preferencias_cantAlmnos_por_clase_fisio_listaDeEs" translatable="false">alum_por_clas_fisio_listaDeEs</string>

    <string name="db_preferencias_cant_clases" translatable="false">cantidad_clases</string>
    <string name="db_preferencias_cant_semanas" translatable="false">cantidad_semanas</string>
    <string name="db_preferencias_cant_horas_reserv" translatable="false">cantidad_horas_reserv</string>
    <string name="db_preferencias_cant_horas_cancelar" translatable="false">cantidad_horas_cancelar</string>
    <string name="db_preferencias_hora_inicio_entre_sem" translatable="false">hora_init_entre_semana</string>
    <string name="db_preferencias_hora_fin_entre_sem" translatable="false">hora_fin_entre_semana</string>
    <string name="db_preferencias_hora_inicio_sab" translatable="false">hora_init_sab</string>
    <string name="db_preferencias_hora_fin_sab" translatable="false">hora_fin_sab</string>

    <!--FireStore-->
    <string name="db_firestore_semanasActivasDocument" translatable="false">semanas/semanasActivas</string>
    <string name="db_firestore_semanasActivasCollection" translatable="false">semanas/semanasActivas/semanas</string>
    <!--Basededatos-->

    <!--Estados clase clientes-->
    <string name="ecc_ocupado" translatable="false">ocupado</string>
    <string name="ecc_disponible" translatable="false">disponible</string>
    <string name="ecc_lista_deEspera" translatable="false">lista</string>
    <string name="ecc_reservada" translatable="false">reservada</string>
    <string name="ecc_not_available" translatable="false">not available</string>


    <!--Estados clase clientes-->

    <!--Dias calendario-->
    <string name="lunesab">lun.</string>
    <string name="martesab">mar.</string>
    <string name="miercolesab">mier.</string>
    <string name="juevesab">jue.</string>
    <string name="viernesab">vie.</string>
    <string name="sabadoab">sab.</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <!--Dias-->

    <!--Cosas a traducir-->
    <string name="problema_inic_secion_title">Inicio Sesion</string>
    <string name="problema_inic_secion_message">Hubo un problema al iniciar sesión. Vuelve a intentarlo más tarde.</string>
    <string name="fisioterapia">Fisioterapia</string>
    <string name="pilates">Pilates</string>
    <string name="guardar">Guardar</string>
    <!--Cosas a traducir-->

    <!--Toolbar menus-->
    <string name="menu_contactar">Contactar</string>
    <string name="menu_cerrar_sec">Cerrar Sesión</string>
    <string name="toolbarmenu_historial">Historial</string>
    <!--Marce-->
    <string name="toolbarmenu_marce_profesores">Profesores</string>
    <string name="toolbarmenu_marce_clientes">Clientes</string>
    <string name="toolbarmenu_marce_solicitudes">Solicitudes</string>
    <string name="toolbarmenu_marce_paquetes">Paquetes</string>
    <string name="toolbarmenu_marce_calendario">Calendario</string>
    <string name="toolbarmenu_marce_generar_reporte">Generar Reporte</string>
    <string name="title_activity_lista_clientes_oprofesores">ListaClientesOProfesores</string>
    <!--Marce-->
    <!--Profe-->

    <!--Profe-->

    <!--Mensajes pop-ups-->
    <string name="boton_guardar_preferencias">Guardar</string>
    <string name="boton_descartar_preferencias">Descartar</string>
    <string name="boton_cancelar_cerrar_secion">Cancelar</string>
    <string name="boton_aceptar_cerrar_secion">Aceptar</string>
    <string name="boton_eliminar">Eliminar</string>

    <!--Palabras nada mas-->
    <string name="anos">años</string>
    <string name="anadir_cliente">Añadir Cliente</string>
    <string name="anadir_clase">Añadir Clase</string>
    <string name="anadir_profesor">Añadir Profesor</string>

    <!--Toolbar menus-->

    <string-array name="hombre_mujer">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <!--PreferenciasActivity-->
    <string name="PrefAct_texto_cantidadEstudiantes">Pilates</string>
    <string name="PrefAct_texto_cantidadFisioterapia">Fisioterapia</string>
    <string name="PrefAct_texto_cantidadClases">Cantidad clases por hora</string>
    <string name="PrefAct_texto_cantidadSemanas">Semanas para reservar</string>
    <string name="PrefAct_texto_cantidadHorasReserva">Horas para reservar</string>
    <string name="PrefAct_texto_cantidadHorasCancelar">Horas para cancelar</string>
    <string name="PrefAct_texto_horasInicioEntreSem">Hora inicial </string>
    <string name="PrefAct_texto_horasFinalEntreSem">Hora final </string>
    <string name="PrefAct_texto_horasInicioSab">Hora inicial </string>
    <string name="PrefAct_texto_horasFinalSab">Hora final </string>
    <string name="PrefAct_texto_semanaModelo">Semana Modelo</string>
    <string name="PrefAct_titulo_semanaModelo">Semana Modelo</string>
    <string name="PrefAct_titulo_numeroDeEstudiantes">Número de Estudiantes</string>
    <string name="PrefAct_titulo_numeroDeEstudiantes_listaDeEspera">Número de Estudiantes Lista De Espera</string>
    <string name="PrefAct_titulo_horarioLunesAViernes">Horario Lunes a Viernes</string>
    <string name="PrefAct_titulo_horarioSabado">Horario Sabado</string>
    <string name="PrefAct_titulo_tiempoLimite">Tiempo Límite</string>


</resources>
