<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_marcela">
        <item
            android:id="@+id/menu_marce_solicitudes"
            android:icon="@drawable/ic_solicitudes"
            android:title="@string/toolbarmenu_marce_solicitudes" />
        <item
            android:id="@+id/menu_marce_clientes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/toolbarmenu_marce_clientes" />
        <item
            android:id="@+id/menu_marce_paquetes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/toolbarmenu_marce_paquetes" />
        <item
            android:id="@+id/menu_marce_profesores"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/toolbarmenu_marce_profesores" />
        <item android:id="@+id/menu_marce_generar_reporte"
            android:icon="@drawable/ic_generar_reporte"
            android:title="@string/toolbarmenu_marce_generar_reporte"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu_clientesyprofes">
        <item
            android:id="@+id/menu_historial"
            android:icon="@drawable/ic_solicitudes"
            android:title="@string/toolbarmenu_historial" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_contactar" />
            <item
                android:id="@+id/nav_cerrar_sesion"

                android:title="@string/menu_cerrar_sec" />

        </menu>
    </item>

</menu>
