<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="ubung.co.ubung.Marce.PreferenciasActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Semana Generica      >"
            android:id="@+id/preferencias_tv_semana_generica"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_cantidad_personas">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_cantidadEstudiantes"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_cantidad_clases"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_cantidadClases"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_hora_inicial_entre_semana">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_horasInicioEntreSem"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_hora_final_entre_semana">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_horasFinalEntreSem"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_hora_inicial_sabado">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_horasInicioSab"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_hora_final_sabado"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_horasFinalSab"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_cantidad_horas_reservar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_cantidadHorasReserva"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_cantidad_horas_cancelar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_cantidadHorasCancelar"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_cantidad_semanas">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_cantidadSemanas"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/preferencias_et_cantidad_personas_fisio">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrefAct_texto_cantidadFisioterapia"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>
